feat: Added benchmarking
Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -40,3 +40,7 @@ target_link_libraries(
 
 include(GoogleTest)
 gtest_discover_tests(casbintest)
+
+if(BUILD_BENCHMARK)
+  add_subdirectory(benchmarks)
+endif()
