test: Added benchmarks for CachedEnforcer
Signed-off-by: Yash Pandey (YP) <yash.btech.cs19@iiitranchi.ac.in>

--- a/tests/benchmarks/CMakeLists.txt
+++ b/tests/benchmarks/CMakeLists.txt
@@ -13,6 +13,7 @@
 #  limitations under the License.
 
 add_executable(casbin_benchmark
+    config_path.h
     main.cpp
     enforcer_cached_b.cpp
 )
