--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,21 +15,27 @@
 if(CASBIN_BUILD_TEST)
   set(CMAKE_CXX_STANDARD 17)
 
-add_executable(
-  casbintest
-  built_in_functions_test.cpp
-  config_test.cpp
-  enforcer_test.cpp
-  enforcer_cached_test.cpp
-  enforcer_synced_test.cpp
-  management_api_test.cpp
-  model_enforcer_test.cpp
-  model_test.cpp
-  rbac_api_with_domains_test.cpp
-  rbac_api_test.cpp
-  role_manager_test.cpp
-  util_test.cpp
-)
+  add_executable(
+    casbintest
+    built_in_functions_test.cpp
+    config_test.cpp
+    enforcer_test.cpp
+    enforcer_cached_test.cpp
+    enforcer_synced_test.cpp
+    management_api_test.cpp
+    model_enforcer_test.cpp
+    model_test.cpp
+    rbac_api_with_domains_test.cpp
+    rbac_api_test.cpp
+    role_manager_test.cpp
+    util_test.cpp
+  )
+
+  if(UNIX)
+    set_target_properties(casbintest PROPERTIES
+      POSITION_INDEPENDENT_CODE ON
+    )
+  endif()
 
   target_include_directories(casbintest PUBLIC ${CMAKE_SOURCE_DIR})
 
